--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="nom, ном, book, books, зохиол, internom">
     <link rel="stylesheet" href="style.css">
     <title>Internom</title>
 </head>
@@ -72,8 +73,5 @@
             <span>Тусламж</span>
         </article>
     </footer>
-    <div>
-        <h1>Hello</h1>
-    </div>
 </body>
 </html>
