turshiltiiin jijig zasvar

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </article>
     </main>
     <footer>
-        <article>
+        <article class="foot">
             <span>Хаяг</span>
             <span>Холбоо барих</span>
             <span>Тусламж</span>
