--- a/index.html
+++ b/index.html
@@ -12,12 +12,72 @@
     <head>
         <nav><img src="logo.png" alt="">
             <div>
-                <input type="text" placeholder="Search">
-                <button>Go</button>
+                <input type="text" placeholder="Search" class="searchin">
+                <button class="searchbtn">Go</button>
             </div>
             <div>
-                <button>SIGN UP</button>
-                <button>SIGN IN</button>
+                <button onclick="document.getElementById('login').style.display='block'" style="width:auto;">Login</button>
+
+<div id="login" class="modal">
+  
+  <form class="modal-content animate" action="/action_page.php" method="post">
+    <div class="closebtn">
+      <span onclick="document.getElementById('login').style.display='none'" class="close" title="Close Modal">&times;</span>
+      <h1>Нэвтрэх</h1>
+    </div>
+
+    <div class="container">
+      <label><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" required>
+
+      <label><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+        
+      <button type="submit">Login</button>
+      <label>
+        <input type="checkbox" name="remember"> Remember me
+      </label>
+    </div>
+
+    <div class="container" style="background-color:#f1f1f1">
+      <button type="button" onclick="document.getElementById('login').style.display='none'" class="cancelbtn">Cancel</button>
+      <span class="psw">Forgot <a href="#">password?</a></span>
+    </div>
+  </form>
+</div>
+
+
+<button onclick="document.getElementById('signup').style.display='block'" style="width:auto;">Sign Up</button>
+
+<div id="signup" class="modal">
+  
+  <form class="modal-content animate" action="/action_page.php" method="post">
+    <div class="closebtn">
+      <span onclick="document.getElementById('signup').style.display='none'" class="close" title="Close Modal">&times;</span>
+      <h1>Бүртгүүлэх</h1>
+    </div>
+
+    <div class="container">
+      <label><b>E-Mail</b></label>
+      <input type="text" placeholder="Enter E-Mail" name="email" required>
+
+      <label><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+
+      <label><b>Password Again</b></label>
+      <input type="password" placeholder="Enter Password Again" name="pswa" required>
+        
+      <button type="submit">SIGN UP</button>
+      <label>
+        <input type="checkbox" name="remember"> Remember me
+      </label>
+    </div>
+
+    <div class="container" style="background-color:#f1f1f1">
+      <button type="button" onclick="document.getElementById('signup').style.display='none'" class="cancelbtn">Cancel</button>
+    </div>
+  </form>
+</div>
             </div>
             <div class="nav">
                 <span><a href="index.html">Эхлэл</a></span>
