tuslamj heseg bolon nemelt oorchlolt

--- a/tuslamj.html
+++ b/tuslamj.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="nom, ном, book, books, зохиол, internom">
     <link rel="stylesheet" href="style.css">
-    <title>Internom</title>
+    <title>Document</title>
 </head>
 <body>
     <head>
@@ -100,31 +99,19 @@
         </nav>
     </head>
     <main>
-        <section class="image">
-            <img src="image1.jpg" alt="" height="500px" width="1500px">
-        </section>
-        <article class="zuragnuud">
-            <div class="column">
-                <img src="image2.jpg" alt="" width="300px" height="300px">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-            <div class="column">
-                <img src="image3.jpg" alt="" width="300px" height="300px">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-            <div class="column">
-                <img src="image4.jpg" alt="" width="300px" height="300px">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-            <div class="column">
-                <img src="image5.jpg" alt="" width="300px" height="300px">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-            <div class="column">
-                <img src="image6.jpg" alt="" width="300px" height="300px">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-        </article>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio?</p>
+        <p>Error illo doloribus sit iste laudantium quaerat voluptatum quisquam ex.</p>
+        <p>Quam amet et repellendus, quae vero pariatur aperiam ab aut?</p>
+        <p>Iste ad sunt asperiores assumenda ab fuga autem quasi nobis!</p>
+        <p>Et eius repellat provident porro quas libero cum aperiam ad?</p>
+        <p>Iusto laborum mollitia modi quidem magni consectetur tempora nulla aut!</p>
+        <p>Ut cupiditate eaque aut explicabo debitis assumenda, culpa ipsa commodi.</p>
+        <p>Incidunt, consequatur amet placeat necessitatibus veniam architecto in nostrum harum.</p>
+        <p>Ullam voluptates a maiores rerum magnam. Accusamus quae nam possimus.</p>
+        <p>Consectetur nisi aliquam quaerat voluptas, quidem excepturi minus natus animi?</p>
+        <p>Recusandae aut voluptatibus mollitia hic incidunt necessitatibus quidem eos quia?</p>
+        <p>Laudantium culpa sequi facilis id sint doloremque dignissimos repellendus veritatis!</p>
+        <p>Delectus magni, iste fugiat quia voluptas illo earum ratione saepe.</p>
     </main>
     <footer>
         <article class="foot">
