--- a/index.html
+++ b/index.html
@@ -105,23 +105,23 @@
         </section>
         <article class="zuragnuud">
             <div class="column">
-                <img src="image2.jpg" alt="" width="300px" height="300px">
+                <img src="image2.jpg" alt="" width="300vw" height="300vw">
                 <button>Дэлгэрэнгүй</button>
             </div>
             <div class="column">
-                <img src="image3.jpg" alt="" width="300px" height="300px">
+                <img src="image3.jpg" alt="" width="300vw" height="300vw">
                 <button>Дэлгэрэнгүй</button>
             </div>
             <div class="column">
-                <img src="image4.jpg" alt="" width="300px" height="300px">
+                <img src="image4.jpg" alt="" width="300vw" height="300vw">
                 <button>Дэлгэрэнгүй</button>
             </div>
             <div class="column">
-                <img src="image5.jpg" alt="" width="300px" height="300px">
+                <img src="image5.jpg" alt="" width="300vw" height="300vw">
                 <button>Дэлгэрэнгүй</button>
             </div>
             <div class="column">
-                <img src="image6.jpg" alt="" width="300px" height="300px">
+                <img src="image6.jpg" alt="" width="300vw" height="300vw">
                 <button>Дэлгэрэнгүй</button>
             </div>
         </article>
