--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="nom, ном, book, books, зохиол, internom">
+    <meta name="author" content="NMD">
     <link rel="stylesheet" href="style.css">
-    <title>Internom</title>
+    <title>Internom | Интерном</title>
 </head>
 <body>
-    <head>
-        <nav><img src="logo.png" alt="">
+    <header>
+        <nav>
+          <section>
+            <img src="logo.png" alt="internom-logo">
             <div>
                 <input type="text" placeholder="Search" class="searchin">
                 <button class="searchbtn">Go</button>
@@ -97,31 +100,32 @@
                 <span>Бичиг хэрэг</span>
                 <span>Бэлэг дурсгал</span>
             </div>
+            </section>
         </nav>
-    </head>
+    </header>
     <main>
         <section class="image">
-            <img src="image1.jpg" alt="" height="500px" width="1500px">
+            <img src="image1.jpg" alt="book" height="500vw" width="1500vw">
         </section>
         <article class="zuragnuud">
             <div class="column">
-                <img src="image2.jpg" alt="" width="300vw" height="300vw">
+                <img src="image2.jpg" alt="book" width="300vw" height="300vw">
                 <button>Дэлгэрэнгүй</button>
             </div>
             <div class="column">
-                <img src="image3.jpg" alt="" width="300vw" height="300vw">
+                <img src="image3.jpg" alt="book" width="300vw" height="300vw">
                 <button>Дэлгэрэнгүй</button>
             </div>
             <div class="column">
-                <img src="image4.jpg" alt="" width="300vw" height="300vw">
+                <img src="image4.jpg" alt="book" width="300vw" height="300vw">
                 <button>Дэлгэрэнгүй</button>
             </div>
             <div class="column">
-                <img src="image5.jpg" alt="" width="300vw" height="300vw">
+                <img src="image5.jpg" alt="book" width="300vw" height="300vw">
                 <button>Дэлгэрэнгүй</button>
             </div>
             <div class="column">
-                <img src="image6.jpg" alt="" width="300vw" height="300vw">
+                <img src="image6.jpg" alt="book" width="300vw" height="300vw">
                 <button>Дэлгэрэнгүй</button>
             </div>
         </article>
