--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="nom, ном, book, books, зохиол, internom">
     <meta name="author" content="NMD">
+    <meta name="robots" content="noindex,nofollow">
+    <meta name="description" content="intended to sell books">
+    <link rel="canonical" href="https://murun361.github.io/internom">
     <link rel="stylesheet" href="style.css">
     <title>Internom | Интерном</title>
 </head>
