bichig hereg tses bolon busad oorchlolt

--- a/bichig_hereg.html
+++ b/bichig_hereg.html
@@ -4,13 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="nom, ном, book, books, зохиол, internom">
-    <meta name="author" content="NMD">
-    <meta name="robots" content="noindex,nofollow">
-    <meta name="description" content="intended to sell books">
-    <link rel="canonical" href="https://murun361.github.io/internom">
+    <title>Бичиг хэрэг | Stationery</title>
     <link rel="stylesheet" href="style.css">
-    <title>Internom | Интерном</title>
 </head>
 <body>
     <header>
@@ -100,38 +95,35 @@
                     </div>
                 </div>
                 <span>Хямдралтай номнууд</span>
-                <span><a href="bichig_hereg.html">Бичиг хэрэг</a></span>
+                <span>Бичиг хэрэг</span>
                 <span>Бэлэг дурсгал</span>
             </div>
             </section>
         </nav>
     </header>
     <main>
-        <section class="image">
-            <img src="image1.jpg" alt="book" height="500vw" width="1500vw">
+        <section>
+            <h1>Бичиг хэрэг</h1>
         </section>
-        <article class="zuragnuud">
-            <div class="column">
-                <img src="image2.jpg" alt="book" width="300vw" height="300vw">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-            <div class="column">
-                <img src="image3.jpg" alt="book" width="300vw" height="300vw">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-            <div class="column">
-                <img src="image4.jpg" alt="book" width="300vw" height="300vw">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-            <div class="column">
-                <img src="image5.jpg" alt="book" width="300vw" height="300vw">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-            <div class="column">
-                <img src="image6.jpg" alt="book" width="300vw" height="300vw">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-        </article>
+        <section>
+            <article>
+                <img src="pen.png" alt="pen">
+                <h5>Үнэ</h5>
+                <h5>Сагслах</h5>
+                <img src="pencil.png" alt="pencil">
+                <h5>Үнэ</h5>
+                <h5>Сагслах</h5>
+                <img src="rurler.jpg" alt="ruler">
+                <h5>Үнэ</h5>
+                <h5>Сагслах</h5>
+                <img src="notebook.jpg" alt="notebook">
+                <h5>Үнэ</h5>
+                <h5>Сагслах</h5>
+                <img src="glue.jpg" alt="glue">
+                <h5>Үнэ</h5>
+                <h5>Сагслах</h5>
+            </article>
+        </section>
     </main>
     <footer>
         <article class="foot">
