--- a/tuslamj.html
+++ b/tuslamj.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="nom, ном, book, books, зохиол, internom">
     <meta name="author" content="NMD">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Тусламж|Helping center</title>
 </head>
 <body>
     <head>
@@ -116,11 +116,13 @@
         <p>Delectus magni, iste fugiat quia voluptas illo earum ratione saepe.</p>
     </main>
     <footer>
-        <article class="foot">
-            <span>Хаяг</span>
-            <span>Холбоо барих</span>
-            <span><a href="tuslamj.html">Тусламж</a></span>
-        </article>
-    </footer>
+      <article class="foot">
+        <h3><a href="tuslamj.html">Тусламж</a></h3>
+          <h3>Хаяг</h3>
+          <h4>Улаанбаатар Сүхбаатар дүүрэг</h4>
+          <h3>Холбоо барих</h3>
+          <h4>Утас: 95855990</h4>
+      </article>
+  </footer>
 </body>
 </html>
