beleg-dursgal tses

--- a/beleg_dursgal.html
+++ b/beleg_dursgal.html
@@ -4,13 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="nom, ном, book, books, зохиол, internom">
-    <meta name="author" content="NMD">
-    <meta name="robots" content="noindex,nofollow">
-    <meta name="description" content="intended to sell books">
-    <link rel="canonical" href="https://murun361.github.io/internom">
+    <title>Бичиг хэрэг | Souviners</title>
     <link rel="stylesheet" href="style.css">
-    <title>Internom | Интерном</title>
 </head>
 <body>
     <header>
@@ -100,49 +95,46 @@
                     </div>
                 </div>
                 <span>Хямдралтай номнууд</span>
-                <span><a href="bichig_hereg.html">Бичиг хэрэг</a></span>
-                <span><a href="beleg_dursgal.html">Бэлэг дурсгал</a></span>
+                <span>Бичиг хэрэг</span>
+                <span>Бэлэг дурсгал</span>
             </div>
             </section>
         </nav>
     </header>
     <main>
-        <section class="image">
-            <img src="image1.jpg" alt="book" height="500vw" width="1500vw">
+        <section>
+            <h1>Бичиг хэрэг</h1>
         </section>
-        <article class="zuragnuud">
-            <div class="column">
-                <img src="image2.jpg" alt="book" width="300vw" height="300vw">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-            <div class="column">
-                <img src="image3.jpg" alt="book" width="300vw" height="300vw">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-            <div class="column">
-                <img src="image4.jpg" alt="book" width="300vw" height="300vw">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-            <div class="column">
-                <img src="image5.jpg" alt="book" width="300vw" height="300vw">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-            <div class="column">
-                <img src="image6.jpg" alt="book" width="300vw" height="300vw">
-                <button>Дэлгэрэнгүй</button>
-            </div>
-        </article>
+        <section>
+            <article>
+                <img src="souviner.jpg" alt="pen">
+                <h5>Үнэ</h5>
+                <h5>Сагслах</h5>
+                <img src="magnet.jpg" alt="pencil">
+                <h5>Үнэ</h5>
+                <h5>Сагслах</h5>
+                <img src="london.jpg" alt="ruler">
+                <h5>Үнэ</h5>
+                <h5>Сагслах</h5>
+                <img src="bigben.jpg" alt="notebook">
+                <h5>Үнэ</h5>
+                <h5>Сагслах</h5>
+                <img src="giftcard.jpg" alt="glue">
+                <h5>Үнэ</h5>
+                <h5>Сагслах</h5>
+            </article>
+        </section>
     </main>
     <footer>
-      <section class="footer">
-        <article>
-          <h3><a href="tuslamj.html">Тусламж</a></h3>
-            <h3>Хаяг</h3>
-            <h4>Улаанбаатар Сүхбаатар дүүрэг</h4>
-            <h3>Холбоо барих</h3>
-            <h4>Утас: 95855990</h4>
-        </article>
-        </section>
-    </footer>
+        <section class="footer">
+          <article>
+            <h3><a href="tuslamj.html">Тусламж</a></h3>
+              <h3>Хаяг</h3>
+              <h4>Улаанбаатар Сүхбаатар дүүрэг</h4>
+              <h3>Холбоо барих</h3>
+              <h4>Утас: 95855990</h4>
+          </article>
+          </section>
+      </footer>
 </body>
 </html>
