--- a/bichig_hereg.html
+++ b/bichig_hereg.html
@@ -126,13 +126,15 @@
         </section>
     </main>
     <footer>
-        <article class="foot">
-          <h3><a href="tuslamj.html">Тусламж</a></h3>
-            <h3>Хаяг</h3>
-            <h4>Улаанбаатар Сүхбаатар дүүрэг</h4>
-            <h3>Холбоо барих</h3>
-            <h4>Утас: 95855990</h4>
-        </article>
-    </footer>
+        <section class="footer">
+          <article>
+            <h3><a href="tuslamj.html">Тусламж</a></h3>
+              <h3>Хаяг</h3>
+              <h4>Улаанбаатар Сүхбаатар дүүрэг</h4>
+              <h3>Холбоо барих</h3>
+              <h4>Утас: 95855990</h4>
+          </article>
+          </section>
+      </footer>
 </body>
 </html>
