--- a/tuslamj.html
+++ b/tuslamj.html
@@ -95,8 +95,8 @@
                     </div>
                 </div>
                 <span>Хямдралтай номнууд</span>
-                <span>Бичиг хэрэг</span>
-                <span>Бэлэг дурсгал</span>
+                <span><a href="bichig_hereg.html">Бичиг хэрэг</a></span>
+                <span><a href="beleg_dursgal.html">Бэлэг дурсгал</a></span>
             </div>
         </nav>
     </head>
