--- a/tuslamj.html
+++ b/tuslamj.html
@@ -85,16 +85,16 @@
                 <div class="dropdown">
                     <span class="dropdown-text">Номны төрөл</span>
                     <div class="dropdown-content">
-                        <p>Түүхийн ном</p>
-                        <p>Адал явдалт ном</p>
-                        <p>books1</p>
-                        <p>books2</p>
-                        <p>books3</p>
-                        <p>books4</p>
-                        <p>books5</p>
-                    </div>
+                      <p><a href="bestseller.html">Бестселлер</a></p>
+                      <p><a href="history.html">Түүхийн ном</a></p>
+                      <p><a href="action.html">Адал явдалт ном</a></p>
+                      <p><a href="literature.html">Уран зохиолын ном</a></p>
+                      <p><a href="kids.html">Хүүхдийн ном</a></p>
+                      <p><a href="medical.html">Анагаах ухааны ном</a></p>
+                      <p><a href="financial.html">Эдийн засгийн ном</a></p>
+                  </div>
                 </div>
-                <span>Хямдралтай номнууд</span>
+                <span><a href="hyamdral.html">Хямдралтай номнууд</a></span>
                 <span><a href="bichig_hereg.html">Бичиг хэрэг</a></span>
                 <span><a href="beleg_dursgal.html">Бэлэг дурсгал</a></span>
             </div>
